Update deployment workflows to make commit_sha and commit_message optional
- Modified backend-deploy.yaml and frontend-deploy.yaml to set commit_sha and commit_message as optional parameters.
- Added default values for both parameters to streamline manual deployments.

--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -10,12 +10,14 @@ on:
         default: 'main'
       commit_sha:
         description: 'Git SHA of the commit'
-        required: true
+        required: false
         type: string
+        default: 'latest'
       commit_message:
         description: 'Original commit message'
-        required: true
+        required: false
         type: string
+        default: 'Manual deployment'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
