--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -30,9 +30,13 @@ jobs:
         id: commit_info
         run: |
           COMMIT_SHA=$(git rev-parse HEAD)
-          COMMIT_MSG=$(git log -1 --pretty=%B)
+          COMMIT_MSG=$(git log -1 --pretty=%B | head -1)
           echo "sha=${COMMIT_SHA}" >> $GITHUB_OUTPUT
-          echo "message=${COMMIT_MSG}" >> $GITHUB_OUTPUT
+          {
+            echo "message<<EOF"
+            git log -1 --pretty=%B
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
       
       - name: Display Build Information
         run: |
