Update frontend deployment workflow to specify Dockerfile location
- Added a file parameter to the frontend-deploy.yaml workflow to explicitly define the Dockerfile path.
- This change ensures the correct Dockerfile is used during the build process, improving deployment reliability.

--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -101,6 +101,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./frontend/Dockerfile
           push: true
           tags: |
             ${{ steps.login-ecr.outputs.registry }}/salesx:${{ steps.generate-tag.outputs.IMAGE_TAG }}
