--- a/k8s/backend/base/deployment/celery-worker-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-worker-deployment.yaml
@@ -74,7 +74,7 @@ spec:
             - name: CELERY_RESULT_BACKEND
               value: "redis://salesx-redis-0.salesx-redis-headless:6379/0"
             - name: DJANGO_SETTINGS_MODULE
-              value: "config.settings.production"
+              value: "config.settings"
             - name: ENVIRONMENT
               value: "production"
             - name: C_FORCE_ROOT
