--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -83,7 +83,7 @@ spec:
             - name: WORKERS
               value: "4"
             - name: DJANGO_SETTINGS_MODULE
-              value: "config.settings.production"
+              value: "config.settings"
             - name: ALLOWED_HOSTS
               value: "*"
             - name: DEBUG
