--- a/k8s/frontend/base/configmap/nginx-config.yaml
+++ b/k8s/frontend/base/configmap/nginx-config.yaml
@@ -47,13 +47,7 @@ data:
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
         
-        # Additional MIME types
-        types {
-            application/javascript js;
-            text/css css;
-            text/javascript js;
-            application/x-javascript js;
-        }
+        # Note: MIME types already included from /etc/nginx/mime.types
         
         # MIME Types Settings
         types_hash_max_size 2048;
