Refactor Kubernetes configurations for storage and frontend
- Removed the efs-storageclass.yaml file and updated kustomization.yaml to reflect this change.
- Added PersistentVolume and PersistentVolumeClaim definitions in new patches for production deployment.
- Enhanced nginx configuration with improved security headers, rate limiting, and cache control settings.
- Cleaned up frontend deployment by removing unnecessary environment variables.

--- a/k8s/backend/overlays/prod/kustomization.yaml
+++ b/k8s/backend/overlays/prod/kustomization.yaml
@@ -11,6 +11,8 @@ commonLabels:
 
 bases:
   - ../../base
+  - patches/storage/pv.yaml
+  - patches/storage/pvc.yaml
 
 patchesStrategicMerge:
   - patches/django-backend-patch.yaml
