--- a/k8s/backend/overlays/prod/patches/storage/pvc.yaml
+++ b/k8s/backend/overlays/prod/patches/storage/pvc.yaml
@@ -1,14 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: salesx-media-pvc
-  labels:
-    app: salesx
-    component: backend
+  name: salesx-backend-pvc
 spec:
   accessModes:
     - ReadWriteMany
   storageClassName: efs-sc
   resources:
     requests:
-      storage: 5Gi
+      storage: 5Gi 
