--- a/k8s/frontend/base/configmap/nginx-config.yaml
+++ b/k8s/frontend/base/configmap/nginx-config.yaml
@@ -7,273 +7,244 @@ metadata:
     component: frontend
 data:
   nginx.conf: |
-    user nginx;
     worker_processes auto;
-    worker_rlimit_nofile 65535;
-    pid /var/run/nginx.pid;
 
     events {
-        worker_connections 65535;
+        worker_connections 10000;
         multi_accept on;
         use epoll;
     }
 
     http {
-        # Basic Settings
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
+
+        # Hide nginx version and server information
+        server_tokens off;
+
+        # Enhanced logging for security analysis
+        log_format security '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for" '
+                          '$request_time $upstream_response_time '
+                          '$http_x_real_ip $http_x_forwarded_proto';
+
+        access_log /var/log/nginx/access.log security;
+        error_log /var/log/nginx/error.log warn;
+
+        # Performance settings
         sendfile on;
         tcp_nopush on;
         tcp_nodelay on;
-        keepalive_timeout 600s;
-        keepalive_requests 1000;
-        reset_timedout_connection on;
-        client_max_body_size 2048M;
+        keepalive_timeout 65;
+        types_hash_max_size 2048;
 
-        # Hide nginx version
-        server_tokens off;
+        # Timeouts
+        client_body_timeout 10s;
+        client_header_timeout 10s;
+        send_timeout 10s;
 
-        # Timeout settings
-        client_body_timeout 600s;
-        client_header_timeout 600s;
-        send_timeout 600s;
-        
         # Buffer size settings
         client_body_buffer_size 128k;
         client_header_buffer_size 1k;
+        client_max_body_size 10m;
         large_client_header_buffers 4 4k;
-        output_buffers 1 32k;
-        postpone_output 1460;
 
-        # MIME Types Configuration
-        include /etc/nginx/mime.types;
-        default_type application/octet-stream;
-        
-        # Note: MIME types already included from /etc/nginx/mime.types
-        
-        # MIME Types Settings
-        types_hash_max_size 2048;
-        types_hash_bucket_size 64;
+        # Rate limiting
+        limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+        limit_conn_zone $binary_remote_addr zone=addr:10m;
+        limit_conn addr 100;
 
-        # Hash table settings
-        server_names_hash_bucket_size 256;
-        variables_hash_max_size 2048;
-
-        # Logging Settings
-        access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
-        error_log /var/log/nginx/error.log warn;
-
-        # Gzip Settings
-        gzip on;
-        gzip_disable "msie6";
-        gzip_vary on;
-        gzip_proxied any;
-        gzip_comp_level 6;
-        gzip_buffers 16 8k;
-        gzip_http_version 1.1;
-        gzip_min_length 256;
-        gzip_types
-            application/atom+xml
-            application/javascript
-            application/json
-            application/ld+json
-            application/manifest+json
-            application/rss+xml
-            application/vnd.geo+json
-            application/vnd.ms-fontobject
-            application/x-font-ttf
-            application/x-web-app-manifest+json
-            application/xhtml+xml
-            application/xml
-            font/opentype
-            font/woff
-            font/woff2
-            image/bmp
-            image/svg+xml
-            image/x-icon
-            text/cache-manifest
-            text/css
-            text/plain
-            text/vcard
-            text/vnd.rim.location.xloc
-            text/vtt
-            text/x-component
-            text/x-cross-domain-policy;
-
-        include /etc/nginx/conf.d/*.conf;
-
-        # Define maps for request validation
-        map $request_method $is_write_method {
-            POST    1;
-            PUT     1;
-            PATCH   1;
-            default 0;
-        }
-
-        map $http_content_type $is_valid_content_type {
-            "application/json"                          1;
-            "multipart/form-data"                       1;
-            "~^multipart/form-data; boundary=.*"        1;
-            "application/x-www-form-urlencoded"         1;
-            default                                     0;
-        }
-
-        # Combined validation map
-        map "$is_write_method:$is_valid_content_type" $needs_validation {
-            "1:0"   1;
-            default 0;
-        }
-    }
-
-  default.conf: |
-    upstream backend {
-        server salesx-backend:8000;
-        keepalive 32;
-    }
-
-    server {
-        listen 80;
-        server_name _;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        server_tokens off;
-        
-        # Enhanced Security headers
+        # Security headers - applied globally
         add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self' https:; frame-ancestors 'self'; form-action 'self';" always;
+        add_header Permissions-Policy "geolocation=(), microphone=(), camera=(), fullscreen=(self)" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header X-Permitted-Cross-Domain-Policies "none" always;
+        add_header X-Download-Options "noopen" always;
+        add_header X-DNS-Prefetch-Control "off" always;
+        add_header X-Powered-By "" always;
+        add_header Server "" always;
+        add_header X-Runtime "" always;
+        add_header X-Version "" always;
+        add_header X-Application-Version "" always;
 
-        # Cookie security settings
-        proxy_cookie_path / "/; HttpOnly; Secure; SameSite=Strict";
+        # Cache control
+        add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires 0 always;
 
-        # Invalid content type error response
-        location @invalid_content_type {
-            internal;
-            default_type application/json;
-            return 400 '{"status":{"code":400,"response":"failed"},"error":true,"message":"Invalid Content-Type. API endpoints only accept application/json, multipart/form-data or application/x-www-form-urlencoded"}';
-        }
+        # Enhanced CSP for SalesX
+        add_header Content-Security-Policy "
+            default-src 'self';
+            script-src 'self' 'unsafe-inline' https://accounts.google.com https://*.posthog.com https://*.i.posthog.com;
+            style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com;
+            font-src 'self' https://fonts.gstatic.com data: https://*.klockwork.ai https://klockwork.ai;
+            img-src 'self' data: https://cdn.jsdelivr.net https://*.s3.amazonaws.com https://*.amazonaws.com https://*.klockwork.ai;
+            object-src 'none';
+            connect-src 'self' https://klockwork.ai https://*.klockwork.ai https://*.posthog.com https://*.i.posthog.com data:;
+            frame-src 'self' https://accounts.google.com;
+            worker-src 'self' blob: data:;
+            frame-ancestors 'self';
+        " always;
 
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
+        # Compression settings
+        gzip on;
+        gzip_comp_level 6;
+        gzip_min_length 1000;
+        gzip_proxied any;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+        gzip_vary on;
 
-        # Health check endpoint mapping to backend
-        location /api/health/ {
-            proxy_pass http://backend/api/health/;
-            proxy_redirect off;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+         server {
+            listen 80;
+            http2 on;
+            server_name localhost;
 
-        # Error handling
-        error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /error.html;
-        location = /error.html {
-            return 503 '{"error": "Service temporarily unavailable"}';
-            add_header Content-Type application/json;
-            internal;
-        }
+            # Hide server version
+            server_tokens off;
 
-        # Static files from backend
-        location /static/ {
-            proxy_pass http://backend/static/;
-            proxy_redirect off;
-            
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            expires -1;
-            add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
-            add_header Access-Control-Allow-Origin *;
-            add_header X-Content-Type-Options "nosniff";
-        }
+            root /usr/share/nginx/html;
+            index index.html;
 
-        # Media files from backend
-        location /media/ {
-            proxy_pass http://backend/media/;
-            proxy_redirect off;
-            
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Better caching for media files
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            add_header X-Content-Type-Options "nosniff";
-        }
+            # Security headers for this specific server
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+            add_header Permissions-Policy "geolocation=(), microphone=(), camera=(), fullscreen=(self)" always;
+            add_header X-Powered-By "" always;
+            add_header Server "" always;
+            add_header X-Runtime "" always;
+            add_header X-Version "" always;
+            add_header X-Application-Version "" always;
 
-        # API proxy to backend
-        location /api/ {
-            # Content type validation for write operations
-            if ($needs_validation) {
-                error_page 400 = @invalid_content_type;
-                return 400;
+            # Cache control
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header Expires 0 always;
+
+            # Rate limiting
+            limit_req zone=one burst=10 nodelay;
+            limit_conn addr 100;
+
+            # Disable HTTP TRACE method
+            if ($request_method = TRACE) {
+                return 403;
             }
 
-            proxy_pass http://backend;
-            proxy_redirect off;
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Pass client certificate information to Django
-            proxy_set_header SSL-Client-Verify $ssl_client_verify;
-            proxy_set_header SSL-Client-DN $ssl_client_s_dn;
-            proxy_set_header SSL-Client-Cert $ssl_client_cert;
-            
-            proxy_connect_timeout 600s;
-            proxy_send_timeout 600s;
-            proxy_read_timeout 600s;
-            
-            proxy_buffer_size 128k;
-            proxy_buffers 4 256k;
-            proxy_busy_buffers_size 256k;
+            # Health check endpoint
+            location = /health {
+                return 200 'OK';
+                add_header Content-Type text/plain;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Powered-By "" always;
+                add_header Server "" always;
+            }
 
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-        }
+            # Main application
+            location / {
+                try_files $uri $uri/ /index.html;
 
-        # WebSocket support
-        location /ws/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            proxy_connect_timeout 600s;
-            proxy_send_timeout 600s;
-            proxy_read_timeout 600s;
-        }
+                # Ensure the requested path starts with the document root
+                if ($request_filename !~ "^/usr/share/nginx/html/") {
+                    return 403;
+                }
+                
+                # Prevent directory listing
+                autoindex off;
+                
+                # Only allow specific file types
+                location ~* \.(html|css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                    try_files $uri =404;
+                }
 
-        # Cache static assets from frontend
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            access_log off;
-        }
+                # CORS configuration
+                if ($request_method = 'OPTIONS') {
+                    add_header 'Access-Control-Allow-Origin' $http_origin;
+                    add_header 'Access-Control-Allow-Methods' 'GET, HEAD, PUT, POST, PATCH, OPTIONS';
+                    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Database-Choice';
+                    add_header 'Access-Control-Allow-Credentials' 'true';
+                    add_header 'Access-Control-Expose-Headers' 'Correlation-ID';
+                    add_header 'Access-Control-Max-Age' 1728000;
+                    add_header 'Content-Type' 'text/plain; charset=utf-8';
+                    add_header 'Content-Length' 0;
+                    add_header X-Frame-Options "SAMEORIGIN" always;
+                    add_header X-Powered-By "" always;
+                    add_header Server "" always;
+                    return 204;
+                }
 
-        # SPA routing - serve index.html for all other routes
-        location / {
-            try_files $uri $uri/ /index.html;
+                 # CORS allowed origins
+                 if ($http_origin ~ '^https?://(klockwork\.ai|.*\.klockwork\.ai)$') {
+                     add_header 'Access-Control-Allow-Origin' $http_origin always;
+                 }
+
+                add_header 'Access-Control-Allow-Methods' 'GET, HEAD, PUT, POST, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Database-Choice' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Expose-Headers' 'Correlation-ID' always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Powered-By "" always;
+                add_header Server "" always;
+
+                # Set HttpOnly flag for all cookies
+                proxy_cookie_path / "/; HttpOnly; Secure; SameSite=Strict";
+                proxy_cookie_path /api/ "/; HttpOnly; Secure; SameSite=Strict";
+            }
+
+            # Static files
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 30d;
+                add_header Cache-Control "public, max-age=2592000" always;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Powered-By "" always;
+                add_header Server "" always;
+            }
+
+            # Block access to sensitive files and directories
+            location ~ /\.(?!well-known).* {
+                deny all;
+                access_log off;
+                log_not_found off;
+            }
+
+            # Block access to source code and sensitive files
+            location ~* \.(php|js|ts|jsx|tsx|map|log|git|env|DS_Store|swp|bak|old|zip|config|json|md|txt|sql|yml|yaml|xml|ini|conf|sh|bash|exe|dll|so|dylib|class|jar|war|ear|zip|tar|gz|rar|7z)$ {
+                deny all;
+                access_log off;
+                log_not_found off;
+            }
+
+            # Block access to node_modules and other sensitive directories
+            location ~* /(node_modules|\.git|\.svn|\.hg|\.idea|\.vscode|\.env|config|src|tests|coverage|dist|build|logs|temp|tmp|cache)/ {
+                deny all;
+                access_log off;
+                log_not_found off;
+            }
+
+            # Custom error pages without version information
+            error_page 404 /404.html;
+            error_page 500 502 503 504 /50x.html;
+            location = /404.html {
+                internal;
+                root /usr/share/nginx/html;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Powered-By "" always;
+                add_header Server "" always;
+            }
+            location = /50x.html {
+                internal;
+                root /usr/share/nginx/html;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Powered-By "" always;
+                add_header Server "" always;
+            }
         }
-    }
+    } 
