Enhance PostgreSQL backup cronjob and update deployment configurations
- Added service account and secrets volume to the PostgreSQL backup cronjob for improved security and access to sensitive data.
- Updated environment variable handling in the backup script to dynamically extract database credentials from DATABASE_URL.
- Changed persistent volume claim names in Django and Celery deployments from salesx-media-pvc to salesx-backend-pvc for consistency across configurations.

--- a/k8s/backend/base/cronjobs/postgresql-backup-cronjob.yaml
+++ b/k8s/backend/base/cronjobs/postgresql-backup-cronjob.yaml
@@ -20,20 +20,47 @@ spec:
             component: backup
         spec:
           restartPolicy: OnFailure
+          serviceAccountName: salesx-backend-secret-sa
+          volumes:
+          - name: salesx-secrets-volume
+            csi:
+              driver: secrets-store.csi.k8s.io
+              readOnly: true
+              volumeAttributes:
+                secretProviderClass: salesx-backend-secrets
           containers:
           - name: postgres-backup
             image: postgres:16-alpine
+            volumeMounts:
+            - name: salesx-secrets-volume
+              mountPath: /mnt/secret-store
+              readOnly: true
             command:
             - /bin/sh
             - -c
             - |
               set -e
               
+              # Load environment variables from secrets
+              if [ -f /mnt/secret-store/.env ]; then
+                export $(grep -v '^#' /mnt/secret-store/.env | xargs)
+              fi
+              
+              # Extract database credentials from DATABASE_URL
+              # Format: postgresql://user:password@host:port/database
+              if [ -n "$DATABASE_URL" ]; then
+                POSTGRES_USER=$(echo $DATABASE_URL | sed -n 's/.*:\/\/\([^:]*\):.*/\1/p')
+                POSTGRES_PASSWORD=$(echo $DATABASE_URL | sed -n 's/.*:\/\/[^:]*:\([^@]*\)@.*/\1/p')
+                POSTGRES_HOST=$(echo $DATABASE_URL | sed -n 's/.*@\([^:]*\):.*/\1/p')
+                POSTGRES_DB=$(echo $DATABASE_URL | sed -n 's/.*\/\([^?]*\).*/\1/p')
+              fi
+              
               BACKUP_DATE=$(date +%Y-%m-%d_%H-%M-%S)
               BACKUP_FILE="/tmp/salesx-backup-${BACKUP_DATE}.sql.gz"
               S3_PATH="s3://${S3_BACKUP_BUCKET}/postgresql/salesx-backup-${BACKUP_DATE}.sql.gz"
               
               echo "Starting PostgreSQL backup at ${BACKUP_DATE}"
+              echo "Database: ${POSTGRES_DB} on ${POSTGRES_HOST}"
               
               # Create backup with pg_dump
               PGPASSWORD=${POSTGRES_PASSWORD} pg_dump \
@@ -78,14 +105,10 @@ spec:
               
               echo "Backup completed successfully"
             env:
-            - name: POSTGRES_HOST
-              value: "c2FsZXN4X3Byb2Q="
-            - name: POSTGRES_DB
-              value: "salesx"
-            - name: POSTGRES_USER
-              value: "salesx"
-            - name: POSTGRES_PASSWORD
-              value: "salesx_secure_password_2024"
+            - name: S3_BACKUP_BUCKET
+              value: "salesx-greatify"
+            - name: AWS_REGION
+              value: "ap-south-1"
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -96,13 +119,6 @@ spec:
                 secretKeyRef:
                   name: salesx-backup-secrets
                   key: aws-secret-access-key
-            - name: S3_BACKUP_BUCKET
-              valueFrom:
-                secretKeyRef:
-                  name: salesx-backup-secrets
-                  key: s3-backup-bucket
-            - name: AWS_REGION
-              value: "ap-south-1"
             resources:
               requests:
                 memory: "256Mi"
