--- a/k8s/backend/base/deployment/celery-worker-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-worker-deployment.yaml
@@ -42,7 +42,7 @@ spec:
               secretProviderClass: salesx-backend-secrets
         - name: salesx-storage
           persistentVolumeClaim:
-            claimName: salesx-media-pvc
+            claimName: salesx-backend-pvc
         - name: logs-volume
           emptyDir: {}
       containers:
