--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -53,7 +53,7 @@ spec:
                 path: nginx.conf
         - name: salesx-storage
           persistentVolumeClaim:
-            claimName: salesx-media-pvc
+            claimName: salesx-backend-pvc
         - name: logs-volume
           emptyDir: {}
       containers:
