--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -114,6 +114,9 @@ spec:
             httpGet:
               path: /api/health/
               port: 8000
+              httpHeaders:
+              - name: Host
+                value: localhost
             initialDelaySeconds: 120
             timeoutSeconds: 30
             periodSeconds: 60
@@ -123,6 +126,9 @@ spec:
             httpGet:
               path: /api/health/
               port: 8000
+              httpHeaders:
+              - name: Host
+                value: localhost
             initialDelaySeconds: 60
             timeoutSeconds: 30
             periodSeconds: 30
@@ -132,6 +138,9 @@ spec:
             httpGet:
               path: /api/health/
               port: 8000
+              httpHeaders:
+              - name: Host
+                value: localhost
             initialDelaySeconds: 30
             timeoutSeconds: 30
             periodSeconds: 10
