Comment out Redis and PostgreSQL StatefulSets in kustomization.yaml for clarity and potential future use.

--- a/k8s/backend/base/kustomization.yaml
+++ b/k8s/backend/base/kustomization.yaml
@@ -17,8 +17,8 @@ resources:
   - deployment/celery-beat-deployment.yaml
   
   # StatefulSets
-  - deployment/redis-statefulset.yaml
-  - deployment/postgresql-statefulset.yaml
+  # - deployment/redis-statefulset.yaml
+  # - deployment/postgresql-statefulset.yaml
   
   # pgAdmin
   # - deployment/pgadmin-deployment.yaml
