Comment out liveness and readiness probes in Django, Celery Beat, and Celery Worker deployments for potential future use. Update Django backend allowed hosts for improved local development support.

--- a/k8s/backend/overlays/prod/kustomization.yaml
+++ b/k8s/backend/overlays/prod/kustomization.yaml
@@ -18,8 +18,8 @@ patchesStrategicMerge:
   - patches/django-backend-patch.yaml
   - patches/celery-worker-patch.yaml
   - patches/celery-beat-patch.yaml
-  - patches/redis-patch.yaml
-  - patches/postgresql-patch.yaml
+  # - patches/redis-patch.yaml
+  # - patches/postgresql-patch.yaml
 
 images:
   - name: 399600302704.dkr.ecr.ap-south-1.amazonaws.com/salesx
