--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -68,7 +68,7 @@ spec:
               cpu: "2000m"
               memory: "4Gi"
           ports:
-            - containerPort: 8000
+            - containerPort: 80
               protocol: TCP
               name: http
           env:
@@ -110,39 +110,39 @@ spec:
             postStart:
               exec:
                 command: ['sh', '-c', 'cp -R /mnt/secret-store/.env /app/.env']
-          livenessProbe:
-            httpGet:
-              path: /api/health/
-              port: 8000
-              httpHeaders:
-              - name: Host
-                value: localhost
-            initialDelaySeconds: 120
-            timeoutSeconds: 30
-            periodSeconds: 60
-            successThreshold: 1
-            failureThreshold: 5
-          readinessProbe:
-            httpGet:
-              path: /api/health/
-              port: 8000
-              httpHeaders:
-              - name: Host
-                value: localhost
-            initialDelaySeconds: 60
-            timeoutSeconds: 30
-            periodSeconds: 30
-            successThreshold: 1
-            failureThreshold: 3
-          startupProbe:
-            httpGet:
-              path: /api/health/
-              port: 8000
-              httpHeaders:
-              - name: Host
-                value: localhost
-            initialDelaySeconds: 30
-            timeoutSeconds: 30
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 30
+          # livenessProbe:
+          #   httpGet:
+          #     path: /api/health/
+          #     port: 80
+          #     httpHeaders:
+          #     - name: Host
+          #       value: localhost
+          #   initialDelaySeconds: 120
+          #   timeoutSeconds: 30
+          #   periodSeconds: 60
+          #   successThreshold: 1
+          #   failureThreshold: 5
+          # readinessProbe:
+          #   httpGet:
+          #     path: /api/health/
+          #     port: 80
+          #     httpHeaders:
+          #     - name: Host
+          #       value: localhost
+          #   initialDelaySeconds: 60
+          #   timeoutSeconds: 30
+          #   periodSeconds: 30
+          #   successThreshold: 1
+          #   failureThreshold: 3
+          # startupProbe:
+          #   httpGet:
+          #     path: /api/health/
+          #     port: 80
+          #     httpHeaders:
+          #     - name: Host
+          #       value: localhost
+          #   initialDelaySeconds: 30
+          #   timeoutSeconds: 30
+          #   periodSeconds: 10
+          #   successThreshold: 1
+          #   failureThreshold: 30
