--- a/k8s/backend/base/deployment/celery-worker-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-worker-deployment.yaml
@@ -91,27 +91,27 @@ spec:
             postStart:
               exec:
                 command: ['sh', '-c', 'cp -R /mnt/secret-store/.env /app/.env']
-          # livenessProbe:
-          #   exec:
-          #     command:
-          #       - celery
-          #       - -A
-          #       - config
-          #       - inspect
-          #       - ping
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 30
-          #   timeoutSeconds: 10
-          #   failureThreshold: 5
-          # readinessProbe:
-          #   exec:
-          #     command:
-          #       - celery
-          #       - -A
-          #       - config
-          #       - inspect
-          #       - ping
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 15
-          #   timeoutSeconds: 5
-          #   failureThreshold: 3
+          livenessProbe:
+            exec:
+              command:
+                - celery
+                - -A
+                - config
+                - inspect
+                - ping
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 5
+          readinessProbe:
+            exec:
+              command:
+                - celery
+                - -A
+                - config
+                - inspect
+                - ping
+            initialDelaySeconds: 30
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
