--- a/k8s/backend/base/deployment/pgadmin-deployment.yaml
+++ b/k8s/backend/base/deployment/pgadmin-deployment.yaml
@@ -40,6 +40,12 @@ spec:
           value: "True"
         - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
           value: "False"
+        - name: PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION
+          value: "False"
+        - name: PGADMIN_CONFIG_SESSION_COOKIE_SECURE
+          value: "False"
+        - name: PGADMIN_CONFIG_CSRF_COOKIE_SECURE
+          value: "False"
         resources:
           requests:
             memory: "512Mi"
