--- a/k8s/backend/base/services/pgadmin-service.yaml
+++ b/k8s/backend/base/services/pgadmin-service.yaml
@@ -6,7 +6,7 @@ metadata:
     app: salesx
     component: pgadmin
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
