--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -62,10 +62,10 @@ spec:
           imagePullPolicy: Always
           resources:
             requests:
-              cpu: "500m"
-              memory: "1Gi"
+              cpu: "1"
+              memory: "2Gi"
             limits:
-              cpu: "2000m"
+              cpu: "2"
               memory: "4Gi"
           ports:
             - containerPort: 80
