--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -3,6 +3,11 @@ name: Build Mobile Apps
 on:
   workflow_dispatch:
     inputs:
+      branch:
+        description: 'Branch to build from'
+        required: true
+        type: string
+        default: 'main'
       platform:
         description: 'Platform to build'
         required: true
@@ -35,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'Greatify/SalesX'
-          ref: 'main'
+          ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.PAT_TOKEN }}
       
       - name: 📱 Setup Node.js
@@ -96,6 +101,7 @@ jobs:
         run: |
           echo "### 🤖 Android Build Complete! ✅" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
           echo "**Version:** ${{ env.APK_VERSION }}" >> $GITHUB_STEP_SUMMARY
           echo "**Build Type:** ${{ github.event.inputs.build_type }}" >> $GITHUB_STEP_SUMMARY
           echo "**APK File:** ${{ env.APK_FILE }}" >> $GITHUB_STEP_SUMMARY
@@ -121,7 +127,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'Greatify/SalesX'
-          ref: 'main'
+          ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.PAT_TOKEN }}
       
       - name: 📱 Setup Node.js
@@ -197,6 +203,7 @@ jobs:
         run: |
           echo "### 🍎 iOS Build Complete! ✅" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
           echo "**Version:** ${{ env.IPA_VERSION }}" >> $GITHUB_STEP_SUMMARY
           echo "**Build Type:** ${{ github.event.inputs.build_type }}" >> $GITHUB_STEP_SUMMARY
           echo "**File:** ${{ env.IPA_FILE }}" >> $GITHUB_STEP_SUMMARY
