📱 Optimize mobile build workflow by adding caching for npm dependencies, Gradle, CocoaPods, and Xcode DerivedData to improve build performance

--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -75,6 +75,24 @@ jobs:
       - name: 🤖 Setup Android SDK
         uses: android-actions/setup-android@v3
       
+      - name: 💾 Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: mobile/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('mobile/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+      
+      - name: 💾 Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      
       - name: 📦 Install dependencies
         working-directory: mobile
         run: |
@@ -172,6 +190,30 @@ jobs:
         with:
           ruby-version: '3.2'
           bundler-cache: true
+      
+      - name: 💾 Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: mobile/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('mobile/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+      
+      - name: 💾 Cache CocoaPods
+        uses: actions/cache@v4
+        with:
+          path: mobile/ios/Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('mobile/ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      
+      - name: 💾 Cache Xcode DerivedData
+        uses: actions/cache@v4
+        with:
+          path: ~/Library/Developer/Xcode/DerivedData
+          key: ${{ runner.os }}-xcode-${{ hashFiles('mobile/ios/**/*.swift', 'mobile/ios/**/*.m', 'mobile/ios/**/*.h') }}
+          restore-keys: |
+            ${{ runner.os }}-xcode-
       
       - name: 📦 Install dependencies
         working-directory: mobile
