--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -123,18 +123,17 @@ jobs:
         run: |
           # Get app version
           VERSION=$(node -p "require('./app.json').expo.version")
-          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
           
-          # Find APK file
+          # Find APK file and set S3 path (always "latest" - S3 versioning handles history)
           if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
             APK_FILE=$(find android/app/build/outputs/apk/release -name "*.apk" | head -n 1)
-            S3_KEY="mobile/android/release/SalesX-v${VERSION}-${TIMESTAMP}.apk"
+            S3_KEY="mobile/android/release/SalesX-latest.apk"
           else
             APK_FILE=$(find android/app/build/outputs/apk/debug -name "*.apk" | head -n 1)
-            S3_KEY="mobile/android/debug/SalesX-v${VERSION}-${TIMESTAMP}.apk"
+            S3_KEY="mobile/android/debug/SalesX-latest.apk"
           fi
           
-          # Upload to S3
+          # Upload to S3 (overwrites previous - S3 versioning keeps history)
           aws s3 cp "$APK_FILE" "s3://salesx-greatify/$S3_KEY"
           
           # Generate CloudFront URL
@@ -273,7 +272,6 @@ jobs:
         run: |
           # Get app version
           VERSION=$(node -p "require('./app.json').expo.version")
-          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
           
           # Find .app file
           APP_FILE=$(find ios/build/Build/Products -name "*.app" -type d | head -n 1)
@@ -285,12 +283,12 @@ jobs:
           
           echo "Found app: $APP_FILE"
           
-          # Zip the .app file
+          # Zip the .app file (always "latest" name - S3 versioning handles history)
           cd "$(dirname "$APP_FILE")"
-          ZIP_NAME="SalesX-iOS-v${VERSION}-${{ github.event.inputs.build_type }}-${TIMESTAMP}.app.zip"
+          ZIP_NAME="SalesX-iOS-latest.app.zip"
           zip -r "$ZIP_NAME" "$(basename "$APP_FILE")"
           
-          # Upload to S3
+          # Upload to S3 (overwrites previous - S3 versioning keeps history)
           if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
             S3_KEY="mobile/ios/release/$ZIP_NAME"
           else
